--- a/src/css/alertas.css
+++ b/src/css/alertas.css
@@ -1,12 +1,19 @@
-body {
+/* reset CSS*/
+* {
     margin: 0;
-    font-family: Arial, sans-serif;
+    padding: 0;
+    box-sizing: border-box;
+}
+  
+html, body {
+    height: 100%;
+    font-family: sans-serif;
 }
 
+/* Cabeçalho = header */
 header {
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 100%;
 }
 
@@ -23,8 +30,6 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    padding: 10px 5%;
 }
 
 .logo img {
@@ -33,7 +38,7 @@ header {
 
 #barra-de-pesquisa {
     display: flex;
-    align-items: center;
+    cursor: pointer;
 }
 
 #barra-de-pesquisa img {
@@ -42,21 +47,16 @@ header {
 }
 
 #barra-de-pesquisa input {
-    padding: 5px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
-/* navbar */
+/* navbar = barra de navegação*/
 .navbar-container {
     display: flex;
     justify-content: flex-end;
     width: 100%;
     padding: 10px 5%;
-}
-
-.navbar {
-    width: auto;
 }
 
 .navbar ul {
@@ -87,32 +87,204 @@ header {
     color: white;
 }
 
+/* Conteúdo Principal = Main */
+
 main {
-    background-color: #ccc;
+    padding: 20px;
+    background-color: #e9e9e9;
+}
+
+
+#map {
+    width: 100%;
+    height: 400px;
+}
+
+#cards {
     display: flex;
-    height: 80%;
-    width: 80;
-    padding: 0%;
+    margin: auto;
     flex-direction: column;
+    padding: 10px;
+    width: 700px;
 }
 
-.cards-main {
+.pedaco {
+    display: flex;
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    width: 15%;
+    font-size: 16px;
+    margin: 40px auto 20px auto;
+    justify-content: center;
+}
+
+span {
+    display: flex;
+    margin: auto auto 20px auto;
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    width: 15%;
+    border-radius: 13px 13px 13px 13px;
+    justify-content: center;
+}
+
+
+.element-principal {
+    display: flex;
+    background-color: #007bff;
+    color: white;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 5px;
+    border-radius: 8px 8px 0px 0px;
+}
+
+.element-secundario {
+    padding: 5px;
+    display: flex;
+    background-color: white;
+    justify-content: space-around;
+}
+
+.expandir-btn {
+    display: flex;
+    background-color: white;
+    border: none;
+    justify-content: center;
+    border-radius: 0px 0px 8px 8px;
+    cursor: pointer;
+    padding: 5px;
+    border-top: 1px solid #000;
+}
+
+.gravidade-alta {
+    background-color: rgb(223, 43, 43);
+    color: white;
+    border-radius: 5px 5px 5px 5px;
+    padding: 2px;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.gravidade-media {
+    background-color: rgb(236, 200, 38);
+    color: white;
+    border-radius: 5px 5px 5px 5px;
+    padding: 2px;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.gravidade-baixa {
+    background-color: rgb(19, 176, 19);
+    color: white;
+    border-radius: 5px 5px 5px 5px;
+    padding: 2px;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.cidade {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    text-align: center;
+    margin-left: 32px;
 }
 
-#map > img {
-    height: 15cm;
-    width: 30cm;
+.gravidades {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-left: 22px;
 }
 
 
+
+/* rodapé = footer */
 
 footer {
     background-color: #007bff;
-    display: flex;
-    height: 40%;
+    height: 140px;  
     width: 100%;
+    position: relative;
+    color: white;
+    overflow: hidden;
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    padding: 10px 20px;
+    height: 100%;
+}
+
+#qrcode {
+    height: 100px;
+    width: 100px;
+}
+
+#bandeira {
+    height: 80px;
+    width: auto;
+    margin-bottom: 10px;
+}
+
+.elementsfooter {
+    display: flex;
+    margin-bottom: 5px;
+}
+
+.elementsfooter a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+}
+
+.elementsfooter img {
+    margin-right: 10px;
+    height: 20px; 
+    width: 20px;   
+}
+
+.elementsfooter h3 {
+    margin: 0;
+    font-size: 14px;
+}
+
+#footerfeio {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.middle-section {
+    text-align: center;
+}
+
+.diagonal-line {
+    position: absolute;
+    width: 1px;
+    background-color: rgb(0, 0, 0);
+    height: 180px; 
+}
+
+.diagonal-line.left {
+    top: 0;
+    left: 33.33%;
+    transform: rotate(45deg);
+}
+
+.diagonal-line.right {
+    top: 0;
+    left: 66.66%;
+    transform: rotate(45deg);
 }
