--- a/src/css/padronizacao.css
+++ b/src/css/padronizacao.css
@@ -82,3 +82,86 @@ header {
     background-color: #007bff;
     color: white;
 }
+
+/* rodapé = footer */
+
+footer {
+    background-color: #007bff;
+    height: 140px;  
+    width: 100%;
+    position: relative;
+    color: white;
+    overflow: hidden;
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    padding: 10px 20px;
+    height: 100%;
+}
+
+#qrcode {
+    height: 100px;
+    width: 100px;
+}
+
+#bandeira {
+    height: 80px;
+    width: auto;
+    margin-bottom: 10px;
+}
+
+.elementsfooter {
+    display: flex;
+    margin-bottom: 5px;
+}
+
+.elementsfooter a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+}
+
+.elementsfooter img {
+    margin-right: 10px;
+    height: 20px; 
+    width: 20px;   
+}
+
+.elementsfooter h3 {
+    margin: 0;
+    font-size: 14px;
+}
+
+#footer-setor {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.middle-section {
+    text-align: center;
+}
+
+.diagonal-line {
+    position: absolute;
+    width: 1px;
+    background-color: rgb(0, 0, 0);
+    height: 180px; 
+}
+
+.diagonal-line.left {
+    top: 0;
+    left: 33.33%;
+    transform: rotate(45deg);
+}
+
+.diagonal-line.right {
+    top: 0;
+    left: 66.66%;
+    transform: rotate(45deg);
+}
