feat: UPDATE correções

--- a/src/css/contato.css
+++ b/src/css/contato.css
@@ -83,7 +83,7 @@ header {
   background-color: #f1f1f1;
 }
 
-.navbar ul li a[href="alertas.html"] {
+.navbar ul li a[href="contato.html"] {
   background-color: #007bff;
   color: white;
 }
