--- a/src/css/alertas.css
+++ b/src/css/alertas.css
@@ -15,6 +15,7 @@ header {
     display: flex;
     flex-direction: column;
     width: 100%;
+    margin-bottom: 10px;
 }
 
 #faixa-do-header {
@@ -56,7 +57,7 @@ header {
     display: flex;
     justify-content: flex-end;
     width: 100%;
-    padding: 10px 5%;
+    padding: 10px;
 }
 
 .navbar ul {
@@ -88,12 +89,10 @@ header {
 }
 
 /* Conteúdo Principal = Main */
-
 main {
     padding: 20px;
     background-color: #e9e9e9;
 }
-
 
 #map {
     width: 100%;
