--- a/src/css/noticias.css
+++ b/src/css/noticias.css
@@ -12,8 +12,8 @@ body {
 header {
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 100%;
+    margin-bottom: 10px;
 }
 
 #faixa-do-header {
@@ -29,8 +29,6 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    padding: px 5%;
 }
 
 .logo img {
@@ -39,7 +37,7 @@ header {
 
 #barra-de-pesquisa {
     display: flex;
-    align-items: center;
+    cursor: pointer;
 }
 
 #barra-de-pesquisa img {
@@ -48,21 +46,16 @@ header {
 }
 
 #barra-de-pesquisa input {
-    padding: 5px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
-/* navbar */
+/* navbar = barra de navegação*/
 .navbar-container {
     display: flex;
     justify-content: flex-end;
     width: 100%;
-    padding: 10px 5%;
-}
-
-.navbar {
-    width: auto;
+    padding: 10px;
 }
 
 .navbar ul {
@@ -81,6 +74,7 @@ header {
     color: black;
     padding: 10px 15px;
     border-radius: 4px;
+    margin-bottom: 10px;
 }
 
 .navbar ul li a:hover, 
@@ -93,12 +87,18 @@ header {
     color: white;
 }
 
+/* Main */
+
 main {
-    background-color: #ccc;
+    background-color: #e9e9e9;
     display: flex;
     height: 80%;
     width: 80;
-    padding: 0%;
+}
+
+h1 {
+    display: flex;
+    justify-content: center;
 }
 
 .noticias img{
@@ -111,7 +111,6 @@ main {
 
 #lastNews .ListaNoticias{
     display: flex;
-    margin-top: 20px;
     margin-right: 300px;
     margin-bottom: 20px;
 }
@@ -134,12 +133,11 @@ main {
 }
 
 article {
-    background-color: #ccc;
+    background-color: #e9e9e9;
     font-size: 19px;
 }
 
 article p{
-    font-family: 'Open Sans';
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 10px;
@@ -147,11 +145,6 @@ article p{
 
 article h1{
     padding: 1%;
-}
-
-hr {
-    margin-top: 16px;
-    margin-bottom: 16px;
 }
 
 #data {
@@ -162,90 +155,83 @@ hr {
     font-weight: bold;
 }
 
-.footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #0066ff; /* Cor de fundo */
-    padding: 20px;
+footer {
+    background-color: #007bff;
+    height: 140px;  
+    width: 100%;
     position: relative;
     color: white;
-    text-decoration: none;
+    overflow: hidden;
 }
 
-.footer-section {
+.footer {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    justify-content: space-around;
+    padding: 10px 20px;
+    height: 100%;
 }
 
-.footer-section.social {
-    flex: 1;
-    text-align: left;
+#qrcode {
+    height: 100px;
+    width: 100px;
+}
+
+#bandeira {
+    height: 80px;
+    width: auto;
+    margin-bottom: 10px;
+}
+
+.elementsfooter {
+    display: flex;
+    margin-bottom: 5px;
+}
+
+.elementsfooter a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+}
+
+.elementsfooter img {
+    margin-right: 10px;
+    height: 20px; 
+    width: 20px;   
+}
+
+.elementsfooter h3 {
+    margin: 0;
+    font-size: 14px;
+}
+
+#footerfeio {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
 
-.footer-section.social .footer-item {
-    display: flex;
-    align-items: center;
-    margin: 10px 0;
-}
-
-.footer-section.social .footer-item img {
-    height: 30px; /* Ajuste conforme necessário */
-    margin-right: 10px;
-}
-
-.footer h3{
-    color: white;
-}
-
-.footer-section.flag {
-    flex: 1;
+.middle-section {
     text-align: center;
-    position: relative;
 }
 
-.footer-section.qr {
-    flex: 1;
-    text-align: right;
-    align-items: flex-end;
-}
-
-.footer-item {
-    margin: 10px;
-}
-
-.footer-item img {
-    height: 50px; /* Ajuste conforme necessário */
-    margin-bottom: 10px;
-
-}
-
-.footer .flag p {
-    margin-top: 10px;
-}
-
-.footer::before {
-    content: "";
+.diagonal-line {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 66.66%; /* Posição da linha diagonal */
-    width: 2px; /* Largura da linha */
-    background-color: black; /* Cor da linha */
-    transform: skew(-20deg); /* Ângulo da linha */
+    width: 1px;
+    background-color: rgb(0, 0, 0);
+    height: 180px; 
 }
 
-.linha {
-    content: "";
-    position: absolute;
+.diagonal-line.left {
     top: 0;
-    bottom: 0;
-    left: 33.33%; /* Posição da linha diagonal */
-    width: 2px; /* Largura da linha */
-    background-color: black; /* Cor da linha */
-    transform: skew(-20deg); /* Ângulo da linha */
+    left: 33.33%;
+    transform: rotate(45deg);
+}
+
+.diagonal-line.right {
+    top: 0;
+    left: 66.66%;
+    transform: rotate(45deg);
 }
