--- a/src/css/paginainicial.css
+++ b/src/css/paginainicial.css
@@ -1,77 +1,45 @@
+/* reset CSS*/
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
-   
-  }
-
-
-  body{
-    background-color: #ffffff;
-  }
-
-
-  main{
-    background-color: #D9D9D9;
-
-
-  }
-    /*.titulo{
-      font-size: 50px;
-      font-family: Arial, sans-serif;
-      color: #ffffff;
-      position: relative;
-    }      */  
-
-
-
-
-header {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-    
- }
-  
-  #faixa-do-header {
-      background-color: #007bff;
-      color: white;
-      padding: 10px;
-      text-align: center;
-      width: 100%;
-      margin: 0;
-  }
-
-
-
-
-.imgalagada {
-  width: 100%;
-  height: 500px;
-  margin-top: -35px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+html, body {
+  height: 100%;
+  font-family: sans-serif;
+}
 
+/* Cabeçalho = header */
+header {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 10px;
+}
 
+#faixa-do-header {
+  background-color: #007bff;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  width: 100%;
+  margin: 0;
+}
 
 .header-top {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  padding: 10px 5%;
 }
 
 .logo img {
   height: 60px; 
 }
 
-
 #barra-de-pesquisa {
   display: flex;
-  align-items: center;
+  cursor: pointer;
 }
 
 #barra-de-pesquisa img {
@@ -80,21 +48,16 @@ header {
 }
 
 #barra-de-pesquisa input {
-  padding: 5px;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
 
-/* navbar */
+/* navbar = barra de navegação*/
 .navbar-container {
   display: flex;
   justify-content: flex-end;
   width: 100%;
-  padding: 10px 5%;
-}
-
-.navbar {
-  width: auto;
+  padding: 10px;
 }
 
 .navbar ul {
@@ -119,14 +82,23 @@ header {
 .navbar ul li a:focus {
   background-color: #f1f1f1;
 }
+
+.navbar ul li a[href="index.html"] {
+  background-color: #007bff;
+  color: white;
+}
  
+
+/* main */
+main {
+  background-color: #e9e9e9;
+}
+
 .imgalagada {
   width: 100%;
   height: 500px;
   margin-top: -35px;
 }
-
-
 
 .left-column {
   display: flex; /* usar flexbox para alinhar os links */
@@ -134,9 +106,6 @@ header {
   align-items: flex-start; /* alinhar os links à esquerda */
   margin-left: 90px; /* alinhar as letras dos links */
 }
-
-
-
 
 .left-column a {
   text-decoration: none; /* remover sublinhado dos links */
@@ -147,15 +116,9 @@ header {
   font-style: italic;
 }
 
-
-
-
 .left-column a:hover {
   color: #D9D9D9; /* cor dos links ao passar o mouse */
 }
-
-
-
 
 .bandeiracentro img {
   width: 150px; /* largura da bandeira */
@@ -165,14 +128,10 @@ header {
   right: 50px;
 }
 
-
 .right-column {
     display: flex; /* usar flexbox para alinhar o QR Code */
     justify-content: flex-end; /* alinhar o QR Code à direita */
 }
-
-
-
 
 .right-column img {
     width: 130px; /* largura do QR Code */
@@ -181,26 +140,17 @@ header {
     right: 70px;
 }
 
-
-
-
 .social-link {
     display: flex; /* usar flexbox para alinhar a imagem e o texto */
     align-items: center; /* centralizar a imagem e o texto verticalmente */
            
 }
 
-
-
-
 .social-link img {
     width: 34px; /* largura da imagem */
     height: 32px; /* altura da imagem */
     margin-right: 45px; /* espaçamento entre a imagem e o texto */
 }
-
-
-
 
 .Copyright{
   position: relative;/* position: absolute; posiciona em relação à bandeira */
@@ -212,9 +162,6 @@ header {
   color: #ffffff;
 } 
 
-
-
-
 h1{
   font-family:  "Inter", sans-serif;
   display: inline-block;
@@ -223,11 +170,9 @@ h1{
   margin-left: 0px
 }
 
-
 p{
   font-family:  "Inter", sans-serif;
 }
-
 
 .texto1{
     display: flex;
@@ -237,7 +182,6 @@ p{
     font-family:  "Inter", sans-serif;
     margin-top: 10px;
   }
-
   
   /* .texto h1 {
     margin-bottom: 10px;
@@ -258,18 +202,14 @@ p{
   margin-top: -180px;
 }
 
-
 aside{
-  background-color: #D9D9D9;
+  background-color: #e9e9e9;
 }
-
-
 
 div-text{
     display: flex;
     justify-content: center;
 }
-
 
 .button-container {
     display: flex;
@@ -278,15 +218,11 @@ div-text{
     padding: 10px 5%;
 }
 
-
 .button {
     width: auto;
     position: relative;
     bottom: 5px;
 }
-
-
-
 
 .button {
     list-style: none;
@@ -296,16 +232,10 @@ div-text{
    
 }
 
-
-
-
 .button {
     margin: 0 10px;
     font-family: Arial, sans-serif;;
 }
-
-
-
 
 .button a {
     text-decoration: none;
@@ -314,34 +244,25 @@ div-text{
     border-radius: 4px;
 }
 
-
-
-
 .button a:hover,
 .button a:focus {
     background-color: #f1f1f1;
 }
-
-
-
 
 .button a[href="alertas.html"] {
     background-color: #007bff;
     color: white;
 }
  
-
 .container { /* container das imgs das entidades que apoiam */
   display: flex;
   height: 300px;    
   width: 100%;
-  background-color: #D9D9D9;
   justify-content: space-around;/* justify-content: space-around; /*gera espaçamento */
   align-items: center;/* align-items: center; alinha os itens na vertical */
   flex-wrap: wrap; /*faz com que quando não tem mais espaço para div na linha, ela vá para baixo */
   font-size: 0px; /* apenas para apagar  */
  }
-
 
  .item{
   display: flex;
@@ -349,12 +270,11 @@ div-text{
   width: 170px;
  }
 
-
  .imagensDoIndex {
   position: relative;
-  /* margin-left: 130px; */
  }
 
+ /* Footer */
 
  footer {
   background-color: #007bff;
@@ -379,7 +299,7 @@ div-text{
   width: 100px;
 }
 
-.bandeira {
+#bandeira {
   height: 80px;
   width: auto;
   margin-bottom: 10px;
@@ -408,7 +328,7 @@ div-text{
   font-size: 14px;
 }
 
-#footer-setor {
+#footerfeio {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -422,7 +342,7 @@ div-text{
   position: absolute;
   width: 1px;
   background-color: rgb(0, 0, 0);
-  height: 190px; 
+  height: 180px; 
 }
 
 .diagonal-line.left {
@@ -433,6 +353,6 @@ div-text{
 
 .diagonal-line.right {
   top: 0;
-  left: 66.80%;
+  left: 66.66%;
   transform: rotate(45deg);
 }
