--- a/src/css/prevencoes.css
+++ b/src/css/prevencoes.css
@@ -1,14 +1,21 @@
-body  {
-    font-family: Arial, sans-serif;
+/* reset CSS*/
+* {
     margin: 0;
-  }
+    padding: 0;
+    box-sizing: border-box;
+}
+  
+html, body {
+    height: 100%;
+    font-family: sans-serif;
+}
 
-
-  header {
+/* Cabeçalho = header */
+header {
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 100%;
+    margin-bottom: 10px;
 }
 
 #faixa-do-header {
@@ -24,8 +31,6 @@ body  {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    padding: 10px 5%;
 }
 
 .logo img {
@@ -34,8 +39,7 @@ body  {
 
 #barra-de-pesquisa {
     display: flex;
-    align-items: center;
-    justify-content: flex-end; 
+    cursor: pointer;
 }
 
 #barra-de-pesquisa img {
@@ -44,21 +48,16 @@ body  {
 }
 
 #barra-de-pesquisa input {
-    padding: 5px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
-/* navbar */
+/* navbar = barra de navegação*/
 .navbar-container {
     display: flex;
     justify-content: flex-end;
     width: 100%;
-    padding: 10px 5%;
-}
-
-.navbar {
-    width: auto;
+    padding: 10px;
 }
 
 .navbar ul {
@@ -91,24 +90,28 @@ body  {
 
 /*mains*/
   main {
-      display: flexblock;
+      display: flex;
       justify-content: space-between;
       padding: 20px;
       width: 100%;
-     
+     background-color: #e9e9e9;
   }
   
-  section {
+.recomendacoes-seguranca {
       flex: 1;
       padding: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       margin: 10px;
       border-radius: 8px;
+      background-color: white;
   }
   .prevencao-tipos {
-      text-align: center;
-      justify-content: center;
-      
+    flex: 1;
+    padding: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    border-radius: 8px;
+    background-color: white;
   }
 
   .prevencao-tipos img {
@@ -145,99 +148,85 @@ body  {
       background-color: #0056b3;
   }
   
- /* img {
-      max-width: 100%;
-      height: auto;
-      display: block;
-      margin-bottom: 10px;
-      text-align: center;
-  }*/
 
+
+  footer {
+    background-color: #007bff;
+    height: 140px;  
+    width: 100%;
+    position: relative;
+    color: white;
+    overflow: hidden;
+}
 
 .footer {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
     align-items: center;
-    background-color: #0066ff; /* Cor de fundo */
-    padding: 20px;
-    position: relative;
-    color: white;
-    text-decoration: none;
+    justify-content: space-around;
+    padding: 10px 20px;
+    height: 100%;
 }
 
-.footer-section {
+#qrcode {
+    height: 100px;
+    width: 100px;
+}
+
+#bandeira {
+    height: 80px;
+    width: auto;
+    margin-bottom: 10px;
+}
+
+.elementsfooter {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin-bottom: 5px;
 }
 
-.footer-section.social {
-    flex: 1;
-    text-align: left;
+.elementsfooter a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+}
+
+.elementsfooter img {
+    margin-right: 10px;
+    height: 20px; 
+    width: 20px;   
+}
+
+.elementsfooter h3 {
+    margin: 0;
+    font-size: 14px;
+}
+
+#footerfeio {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
 
-.footer-section.social .footer-item {
-    display: flex;
-    align-items: center;
-    margin: 10px 0;
-}
-
-.footer-section.social .footer-item img {
-    height: 30px; /* Ajuste conforme necessário */
-    margin-right: 10px;
-}
-
-.footer h3{
-    color: white;
-}
-
-.footer-section.flag {
-    flex: 1;
+.middle-section {
     text-align: center;
-    position: relative;
 }
 
-.footer-section.qr {
-    flex: 1;
-    text-align: right;
-    align-items: flex-end;
-}
-
-.footer-item {
-    margin: 10px;
-}
-
-.footer-item img {
-    height: 50px; /* Ajuste conforme necessário */
-    margin-bottom: 10px;
-
-}
-
-.footer .flag p {
-    margin-top: 10px;
-}
-
-.footer::before {
-    content: "";
+.diagonal-line {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 66.66%; /* Posição da linha diagonal */
-    width: 2px; /* Largura da linha */
-    background-color: black; /* Cor da linha */
-    transform: skew(-20deg); /* Ângulo da linha */
+    width: 1px;
+    background-color: rgb(0, 0, 0);
+    height: 180px; 
 }
 
-.linha {
-    content: "";
-    position: absolute;
+.diagonal-line.left {
     top: 0;
-    bottom: 0;
-    left: 33.33%; /* Posição da linha diagonal */
-    width: 2px; /* Largura da linha */
-    background-color: black; /* Cor da linha */
-    transform: skew(-20deg); /* Ângulo da linha */
+    left: 33.33%;
+    transform: rotate(45deg);
+}
+
+.diagonal-line.right {
+    top: 0;
+    left: 66.66%;
+    transform: rotate(45deg);
 }
