--- a/src/css/paginainicial.css
+++ b/src/css/paginainicial.css
@@ -87,195 +87,103 @@ header {
   background-color: #007bff;
   color: white;
 }
- 
 
 /* main */
 main {
   background-color: #e9e9e9;
+  display: flex;
+  flex-direction: column;
 }
 
-.imgalagada {
+#parte-1 {
   width: 100%;
-  height: 500px;
-  margin-top: -35px;
+  height: 400px;
+  background-image: url(../../assets/riograndealagado.png);
 }
 
-.left-column {
-  display: flex; /* usar flexbox para alinhar os links */
-  flex-direction: column; /* alinhar os links em coluna */
-  align-items: flex-start; /* alinhar os links à esquerda */
-  margin-left: 90px; /* alinhar as letras dos links */
+.portal-clima {
+  text-align: center;
+  margin-top: 140px;
+  color: white;
+  font-size: 80px;
 }
 
-.left-column a {
-  text-decoration: none; /* remover sublinhado dos links */
-  color: #ffffff; /* cor dos links */
-  margin-bottom: 10px; /* espaçamento entre os links */
-  font-family: "Inter", sans-serif;
-  font-size: 23px; /* tamanho da fonte dos links */
-  font-style: italic;
+.portal-clima .hightlight{
+  color: blue;
 }
 
-.left-column a:hover {
-  color: #D9D9D9; /* cor dos links ao passar o mouse */
-}
-
-.bandeiracentro img {
-  width: 150px; /* largura da bandeira */
-  height: 100px; /* altura da bandeira */
-  position: relative;
-  top: -20px;
-  right: 50px;
-}
-
-.right-column {
-    display: flex; /* usar flexbox para alinhar o QR Code */
-    justify-content: flex-end; /* alinhar o QR Code à direita */
-}
-
-.right-column img {
-    width: 130px; /* largura do QR Code */
-    height: 150; /* altura do QR Code */
-    position: relative;
-    right: 70px;
-}
-
-.social-link {
-    display: flex; /* usar flexbox para alinhar a imagem e o texto */
-    align-items: center; /* centralizar a imagem e o texto verticalmente */
-           
-}
-
-.social-link img {
-    width: 34px; /* largura da imagem */
-    height: 32px; /* altura da imagem */
-    margin-right: 45px; /* espaçamento entre a imagem e o texto */
-}
-
-.Copyright{
-  position: relative;/* position: absolute; posiciona em relação à bandeira */
-  bottom: 10px;          
-  left: -50px; /* move o texto 20 pixels à esquerda da bandeira */
-  font-size: 20px; /* tamanho da fonte */
-  font-family: "Inter", sans-serif;
-  font-style: italic;
-  color: #ffffff;
-} 
-
-h1{
-  font-family:  "Inter", sans-serif;
-  display: inline-block;
- 
-  display: flex; align-items: center;
-  margin-left: 0px
-}
-
-p{
-  font-family:  "Inter", sans-serif;
+#parte-2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .texto1{
-    display: flex;
-    flex-direction: column;  
-    font-size: larger;
-    font-size: 20px;
-    font-family:  "Inter", sans-serif;
-    margin-top: 10px;
-  }
-  
-  /* .texto h1 {
-    margin-bottom: 10px;
-    font-weight: 700 bolder;  
-  } */
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 100px;
+  margin: 0%;
+}
 
-  /* .texto p {
-    margin-top: 20px;
-  } */
+.texto1 h2 {
+  font-size: 40px;
+}
 
 .img-doacao {
-  /* position: absolute;
-  top: 30px; */
+  display: flex;
   height: 500px;
-  
-  align-self: flex-end; /* alinha a imagem ao final da linha */
-  /* margin-left: auto; */
-  margin-top: -180px;
+  justify-content: flex-end;
 }
 
-aside{
-  background-color: #e9e9e9;
+.butaum {
+  margin-left: 180px;
+  background-color: #007bff;
+  height: 40px;
+  width: 140px;
+  border-radius: 13px;
+  color: white;
+  cursor: pointer;
+  border: none;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-div-text{
-    display: flex;
-    justify-content: center;
+.butaum:hover {
+  background-color: darkblue;
+  transform: scale(1.05);
 }
 
-.button-container {
-    display: flex;
-    justify-content: center;
-    width: 30%;
-    padding: 10px 5%;
-}
-
-.button {
-    width: auto;
-    position: relative;
-    bottom: 5px;
-}
-
-.button {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-   
-}
-
-.button {
-    margin: 0 10px;
-    font-family: Arial, sans-serif;;
-}
-
-.button a {
-    text-decoration: none;
-    color: black;
-    padding: 10px 15px;
-    border-radius: 4px;
-}
-
-.button a:hover,
-.button a:focus {
-    background-color: #f1f1f1;
-}
-
-.button a[href="alertas.html"] {
-    background-color: #007bff;
-    color: white;
-}
- 
-.container { /* container das imgs das entidades que apoiam */
+.container-geral {
   display: flex;
-  height: 300px;    
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.container-geral h2 {
+  margin-bottom: 20px;
+}
+
+#container-superior,
+#container-inferior {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   width: 100%;
-  justify-content: space-around;/* justify-content: space-around; /*gera espaçamento */
-  align-items: center;/* align-items: center; alinha os itens na vertical */
-  flex-wrap: wrap; /*faz com que quando não tem mais espaço para div na linha, ela vá para baixo */
-  font-size: 0px; /* apenas para apagar  */
- }
+  max-width: 1200px;
+  margin-bottom: 20px;
+  padding: 10px;
+  box-sizing: border-box;
+}
 
- .item{
-  display: flex;
-  height: 90px;
-  width: 170px;
- }
-
- .imagensDoIndex {
-  position: relative;
- }
+#container-superior img,
+#container-inferior img {
+  max-height: 100px;
+  max-width: 100%;
+  object-fit: contain;
+}
 
  /* Footer */
-
  footer {
   background-color: #007bff;
   height: 140px;  
