--- a/assets/css/contato.css
+++ b/assets/css/contato.css
@@ -96,11 +96,11 @@ main {
     background-color: #e9e9e9; 
   }
   
-  h1 {
-    color: #333;
-    margin-bottom: 20px;
-    text-align: center; /* Centraliza o título */
-  }
+h1 {
+  color: #333;
+  margin-bottom: 20px;
+  text-align: center;
+}
 
 #elemento-bom {
   display: flex;
@@ -183,8 +183,7 @@ button[type="submit"]:hover {
   
 /* Rodapé */
 footer {
-  background-color: #007bff;
-  height: 140px;  
+  background-color: #007bff;  
   width: 100%;
   position: relative;
   color: white;
@@ -192,23 +191,24 @@ footer {
 }
 
 .footer {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    padding: 10px 20px;
-    height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  padding: 10px 20px;
+  width: 100%;
+  height: 100%;
 }
 
 #qrcode {
-    height: 120px;
-    width: 120px;
+  height: 120px;
+  width: 120px;
 }
 
 #bandeira {
-    height: 80px;
-    width: auto;
-    margin-bottom: 10px;
+  height: 80px;
+  width: auto;
+  margin-bottom: 10px;
 }
 
 .elementsfooter {
@@ -242,24 +242,24 @@ footer {
 }
 
 .middle-section {
-    text-align: center;
+  text-align: center;
 }
 
 .diagonal-line {
-    position: absolute;
-    width: 1px;
-    background-color: rgb(0, 0, 0);
-    height: 180px; 
+  position: absolute;
+  width: 2px;
+  background-color: rgb(0, 0, 0);
+  height: 100%; 
 }
 
 .diagonal-line.left {
-    top: 0;
-    left: 33.33%;
-    transform: rotate(45deg);
+  top: 0;
+  left: 33.33%;
+  transform: rotate(45deg);
 }
 
 .diagonal-line.right {
-    top: 0;
-    left: 66.66%;
-    transform: rotate(45deg);
+  top: 0;
+  left: 66.66%;
+  transform: rotate(45deg);
 }
