--- a/assets/css/noticias.css
+++ b/assets/css/noticias.css
@@ -156,8 +156,7 @@ article h1{
 }
 
 footer {
-    background-color: #007bff;
-    height: 140px;  
+    background-color: #007bff;  
     width: 100%;
     position: relative;
     color: white;
@@ -170,12 +169,13 @@ footer {
     align-items: center;
     justify-content: space-around;
     padding: 10px 20px;
+    width: 100%;
     height: 100%;
 }
 
 #qrcode {
-    height: 100px;
-    width: 100px;
+    height: 120px;
+    width: 120px;
 }
 
 #bandeira {
@@ -187,6 +187,7 @@ footer {
 .elementsfooter {
     display: flex;
     margin-bottom: 5px;
+    font-size: 90px;
 }
 
 .elementsfooter a {
@@ -198,8 +199,8 @@ footer {
 
 .elementsfooter img {
     margin-right: 10px;
-    height: 20px; 
-    width: 20px;   
+    height: 30px; 
+    width: 30px;   
 }
 
 .elementsfooter h3 {
@@ -219,9 +220,9 @@ footer {
 
 .diagonal-line {
     position: absolute;
-    width: 1px;
+    width: 2px;
     background-color: rgb(0, 0, 0);
-    height: 180px; 
+    height: 100%; 
 }
 
 .diagonal-line.left {
