--- a/assets/css/prevencoes.css
+++ b/assets/css/prevencoes.css
@@ -145,8 +145,7 @@ button {
 
 
   footer {
-    background-color: #007bff;
-    height: 140px;  
+    background-color: #007bff;  
     width: 100%;
     position: relative;
     color: white;
@@ -159,12 +158,13 @@ button {
     align-items: center;
     justify-content: space-around;
     padding: 10px 20px;
+    width: 100%;
     height: 100%;
 }
 
 #qrcode {
-    height: 100px;
-    width: 100px;
+    height: 120px;
+    width: 120px;
 }
 
 #bandeira {
@@ -176,6 +176,7 @@ button {
 .elementsfooter {
     display: flex;
     margin-bottom: 5px;
+    font-size: 90px;
 }
 
 .elementsfooter a {
@@ -187,8 +188,8 @@ button {
 
 .elementsfooter img {
     margin-right: 10px;
-    height: 20px; 
-    width: 20px;   
+    height: 30px; 
+    width: 30px;   
 }
 
 .elementsfooter h3 {
@@ -208,9 +209,9 @@ button {
 
 .diagonal-line {
     position: absolute;
-    width: 1px;
+    width: 2px;
     background-color: rgb(0, 0, 0);
-    height: 180px; 
+    height: 100%; 
 }
 
 .diagonal-line.left {
