--- a/assets/css/sobre.css
+++ b/assets/css/sobre.css
@@ -100,3 +100,7 @@ html, body {
     font-style: italic; /* Itálico */
     color: #007bff; /* Cor azul */
 }
+
+.hightlight {
+    background-color: yellow;
+}
