--- a/assets/css/paginainicial.css
+++ b/assets/css/paginainicial.css
@@ -88,6 +88,10 @@ header {
   color: white;
 }
 
+.highlight {
+  background-color: yellow;
+}
+
 /* main */
 main {
   background-color: #e9e9e9;
@@ -108,7 +112,7 @@ main {
   font-size: 80px;
 }
 
-.portal-clima .hightlight{
+.portal-clima .marcacao{
   color: blue;
 }
 
